2013-02-27  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp.c (omp_delete_task_ext, omp_delete_target_ext) 
	(omp_delete_config_ext, omp_delete_lsc_credential_ext): New functions
	to delete tasks, targets, configs and lsc_credentials with options.

	* omp.h (omp_delete_opts_t): New typedef for omp_delete_... options.
	(omp_delete_opts_defaults, omp_delete_opts_ultimate_defaults): New
	constants for omp_delete_opts_t default values.
	(omp_delete_task_ext, omp_delete_target_ext) 
	(omp_delete_config_ext, omp_delete_lsc_credential_ext): New function
	prototypes.

2013-02-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/CMakeLists.txt: Add GPGME_CFLAGS to compiler flags. Patch
	suggested by Hanno Boeck.

2013-02-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 6.0+beta6.

2013-02-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl.c (main): Update year in copyright notice.

2013-02-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 6.0+beta5 release.

	* CHANGES: Updated.

2013-02-21  Werner Koch  <wk@gnupg.org>

	* misc/network.c (load_file, unload_file, load_cert_and_key):
	Replace gnutls_datum by gnutls_datum_t.

2013-02-21  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (get_plugin_preference): Check prefs is not null
	before using it. Style update to remove mixed declarations and code.

2013-02-21  Werner Koch  <wk@gnupg.org>

	* base/nvticache.c (nvticache_get_by_oid): Take care of a NULL
	used for CACHE.

	* base/pwpolicy.c (policy_checking_failed): New.
	(parse_pattern_line): Split error messages into a log message and
	a shorter version for the user.
	(openvas_validate_password): Ditto.

2013-02-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING: Added module pwpolicy.

2013-02-20  Werner Koch  <wk@gnupg.org>

	* base/pwpolicy.c: New.  Taken from openvas-administrator.