@@ -1,3 +1,11 @@
+2013-03-05  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* misc/plugutils.c (plugin_is_newstyle): New function.
+	(proto_post_wrapped): Don't append nvt description to action when plugin
+	has new style tags.
+
+	* misc/plugutils.h: Add plugin_is_newstyle header.
+
 2013-02-27  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	* omp.c (omp_delete_task_ext, omp_delete_target_ext) 
